--- a/vercel.json
+++ b/vercel.json
@@ -8,6 +8,7 @@
     { "source": "/doctors", "destination": "/doctors.html" },
     { "source": "/facilities", "destination": "/facilities.html" },
     { "source": "/privacypolicy", "destination": "/privacy-policy.html" },
-    { "source": "/terms", "destination": "/terms-of-service.html" }
+    { "source": "/terms", "destination": "/terms-of-service.html" },
+    { "source": "/#contact", "destination": "/index.html#contact"}
   ]
 }
