--- a/vercel.json
+++ b/vercel.json
@@ -2,13 +2,13 @@
   "rewrites": [
     { "source": "/", "destination": "/index.html" },
     { "source": "/contact", "destination": "/contact.html" },
-    { "source": "/about", "destination": "/about-us.html" },
+    { "source": "/about-us", "destination": "/about-us.html" },
     { "source": "/services", "destination": "/services.html" },
     { "source": "/thank-you", "destination": "/thank-you.html" },
     { "source": "/doctors", "destination": "/doctors.html" },
     { "source": "/facilities", "destination": "/facilities.html" },
-    { "source": "/privacypolicy", "destination": "/privacy-policy.html" },
-    { "source": "/terms", "destination": "/terms-of-service.html" },
+    { "source": "/privacy-policy", "destination": "/privacy-policy.html" },
+    { "source": "/terms-of-service", "destination": "/terms-of-service.html" },
     { "source": "/#contact", "destination": "/index.html#contact"}
   ]
 }
