--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,9 @@
 {
   "rewrites": [
     { "source": "/", "destination": "/index.html" },
-    { "source": "/contact", "destination": "/contact.html" },
+    { "source": "/contact-us", "destination": "/contact-us.html" },
     { "source": "/about-us", "destination": "/about-us.html" },
     { "source": "/services", "destination": "/services.html" },
-    { "source": "/thank-you", "destination": "/thank-you.html" },
     { "source": "/doctors", "destination": "/doctors.html" },
     { "source": "/facilities", "destination": "/facilities.html" },
     { "source": "/privacy-policy", "destination": "/privacy-policy.html" },
