added news page for testing

--- a/vercel.json
+++ b/vercel.json
@@ -4,6 +4,7 @@
     { "source": "/contact-us", "destination": "/contact-us.html" },
     { "source": "/about-us", "destination": "/about-us.html" },
     { "source": "/services", "destination": "/services.html" },
+    { "source": "/news", "destination": "/news.html" },
     { "source": "/doctors", "destination": "/doctors.html" },
     { "source": "/facilities", "destination": "/facilities.html" },
     { "source": "/privacy-policy", "destination": "/privacy-policy.html" },
